# macos-tools

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
macos_tools/: __init__.py  cli.py
macos_tools/commands/: dock.py  keyboard.py
mactools/: __init__.py  cli.py
src/mct/: cli.py
src/mct/commands/: dock.py  keyboard.py  system.py
src/mct/defaults/: sudo
