[project]
name = "mactools"
version = "0.1.0"
description = "A CLI tool for managing macOS system settings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mactools"]
