[project]
name = "macos-tools"
version = "0.1.0"
description = "MacOS configuration CLI tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.15.2"]

[project.scripts]
macos-tools = "macos_tools.cli:main"

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
